app/assets/stylesheets/components/_alert.scss
.alert {
  position: fixed;
  top: 10%;
  right: 15%;
  left: 15%;
  z-index: 1000;
  border-radius: .7rem;
  border-radius: 0.7rem;
  background-color: $secondary;
  color: $primary;
  font-size: 2.0rem;
  padding-right: 4rem;
  button {
    background-color: $primary;
    margin-left: 1rem;
  }
}

